[gd_scene load_steps=3 format=3 uid="uid://b2qbydw2buwwv"]

[ext_resource type="Script" uid="uid://dunig6i3vu0or" path="res://wall.gd" id="1_y4f30"]
[ext_resource type="Texture2D" uid="uid://c6bknomplhff6" path="res://wall.png" id="2_iuee5"]

[node name="Wall" type="CharacterBody2D"]
collision_mask = 0
script = ExtResource("1_y4f30")

[node name="TopSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_iuee5")

[node name="BottomSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_iuee5")

[node name="TopCollisionShape" type="CollisionShape2D" parent="."]

[node name="BottomCollisionShape" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="HoleArea" type="Area2D" parent="."]

[node name="HoleCollisionShape" type="CollisionShape2D" parent="HoleArea"]

[connection signal="area_entered" from="HoleArea" to="." method="_on_hole_area_area_entered"]
